--- a/assets/scss/_h1-hero.scss
+++ b/assets/scss/_h1-hero.scss
@@ -36,7 +36,7 @@
 
 .slider-area{
     margin-top: -1px;
-    background-image: url(../img/hero/h1_hero.png);
+    background-image: url(../img/trinity/Pic1.png);
     background-repeat:no-repeat ;
     background-position: top center;
     background-size: cover;
