--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,8 +46,26 @@
 .title_name{
   color: #ff4935;
 }
+.custom-font li{
+  font-family:sans-serif;
+  font-size: 15px;
+}
+.btn-primary1 {
+  background-color:#ff4935;
+  padding: 20px 40px;
+  font-size: 30px;
+  border-radius: 50px;
+  width:50%;
+  height: 100%;
+  font-size: 2.0rem;
+
+}
+.btn-primary1:hover{
+  background-color:#4e4699;
+  border-color: #8064A2;
+}
 .about-low-area .about-right-cap {
-  padding-top: 15px;
+  padding-top: 5px;
 }
 
 .custom-link{
@@ -4092,28 +4110,28 @@ hr {
 @media (max-width: 575px) {
   /* line 55, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_about.scss */
   .about-low-area .about-right-cap {
-    padding-top: 15px;
+    padding-top: 5px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   /* line 55, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_about.scss */
   .about-low-area .about-right-cap {
-    padding-top: 15px;
+    padding-top: 5px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   /* line 55, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_about.scss */
   .about-low-area .about-right-cap {
-    padding-top: 15px;
+    padding-top: 5px;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   /* line 55, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_about.scss */
   .about-low-area .about-right-cap {
-    padding-top: 15px;
+    padding-top: 5px;
   }
 }
 
