--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,17 @@
   background-color:#4e4699;
   border-color: #8064A2;
 }
+
+.btn-success-custom{
+  background-color: #61ce70;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 15px 30px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: none;
+}
+
 .about-low-area .about-right-cap {
   padding-top: 5px;
 }
@@ -2883,31 +2894,31 @@ hr {
 
 /* line 859, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
 .section-padding40 {
-  padding-top: 130px;
-  padding-bottom: 90px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   /* line 859, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
   .section-padding40 {
-    padding-top: 70px;
-    padding-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   /* line 859, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
   .section-padding40 {
-    padding-top: 60px;
-    padding-bottom: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 
 @media (max-width: 575px) {
   /* line 859, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
   .section-padding40 {
-    padding-top: 60px;
-    padding-bottom: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 
@@ -3694,13 +3705,13 @@ hr {
 
 /* line 1, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_h1-hero.scss */
 .slider-height {
-  height: 765px;
+  height: 600px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   /* line 1, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_h1-hero.scss */
   .slider-height {
-    height: 765px;
+    height: 600px;
   }
 }
 
