--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,8 +73,18 @@
   -webkit-border-radius: 4px;
   border-radius: 4px;
   border: none;
+  align-items: center;
+  color: white;
 }
 
+.contact-us-custom{
+  font-size: 15px;
+  padding-top: 5px;
+}
+.txtbox {
+  font-size: 18pt;
+  height: 38px;
+}
 .about-low-area .about-right-cap {
   padding-top: 5px;
 }
