--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,9 @@
   font-size: 18pt;
   height: 38px;
 }
+.orangeiconcolor {
+  color:#ff4935;
+}
 .about-low-area .about-right-cap {
   padding-top: 5px;
 }
