--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,11 @@
 .custom-link{
   color:#000;
 }
-
+.display-7{
+    font-size: 2.0rem;
+    line-height: 1.4;
+    text-decoration: none;
+}
 
 /*-------------Color include--------------*/
 /*-- Background color---*/
