--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,9 @@
   color: #bfbfbf;
 }
 
+.custom-hidden {
+  display:none;
+}
 /*-------------Color include--------------*/
 /*-- Background color---*/
 /* line 60, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_color.scss */
