--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,8 +55,10 @@
  padding-top: 10px;
  padding-bottom: 20px;
   font-size: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 30px;
-  width:50%;
+  width: fit-content;
   border: none;
   text-align: center;
   height: 80%;
