--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,7 @@
   left: 0;
 }
 .cut-corner {
-  padding-top: 250px;
+  padding-top: 225px;
 
   margin:10px;
   height:330px;
@@ -187,6 +187,11 @@
     bottom right/100% 100% no-repeat;
   clip-path:polygon(0 0,100% 0,100% calc(100% - 200px),calc(100% - 30%) 100%, 0 100%); 
 
+}
+.vertical-text-center{
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
 }
 .nopadding {
   padding: 0 !important;
