image size corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9500,6 +9500,9 @@ del {
   .h1-sm-text{
     font-size: 25px;
   }
+  .img{
+    max-width: 100%;
+  }
   .font-20{
     font-size: 20px;
     line-height: normal;
