--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9641,7 +9641,7 @@ img{
   font-weight: 800;
   text-transform: normal;
   line-height: 20px;
-  padding: 0.5em;
+  padding: 0.7em;
 }
 .font-lg{
   font-size: larger;
@@ -9729,6 +9729,9 @@ color: white;
   padding: 10px 0px 10px 0px;
   
 }
+.font-30{
+  font-size: 30px;
+}
 .card-custom-xs-2{
   color: #e17c27;
   margin: 5px;
@@ -9806,6 +9809,35 @@ color: white;
 
 }
 
+.font-22{
+  font-size: 22px;
+}
+.center-sm{
+  text-align: center !important;
+}
+
+.font-30{
+  font-size: 30px;
+}
+.font-40{
+  font-size: 40px;
+
+}
+.purple-btn {
+  background-color: #4054B2;
+  color: white;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 9px 15px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: none;
+  align-items: center;
+  text-align: center;
+}
+.center-item-sm{
+  align-items: center;
+}
 }
 
 @media only screen and (min-width: 360px) and (max-width: 640px) {
@@ -9816,12 +9848,48 @@ color: white;
     text-align: center;
     border: 0;
   }
+  .center-item-sm{
+    align-items: center;
+  }
+  .purple-btn {
+    background-color: #4054B2;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 9
+px
+ 15
+px
+;
+    -webkit-border-radius: 4
+px
+;
+    border-radius: 4
+px
+;
+    border: none;
+    align-items: center;
+    text-align: center;
+}
   .pbc-25{
     padding-bottom: 25px;
+  }
+  .pl-100{
+    padding: 0;
+  }
+  
+  .font-30{
+    font-size: 30px;
   }
   .font-35{
     font-size: 35px;
 
+  }
+  .font-40{
+    font-size: 40px;
+  }
+  .font-22{
+    font-size: 22px;
   }
   .b{
     font-weight: bold;
@@ -9945,7 +10013,9 @@ color: white;
   background: linear-gradient(to bottom right,transparent 0%,#f7685b 28%) bottom right/100% 100% no-repeat;
   clip-path: polygon(0 0,100% 0,100% calc(170% - 143px),calc(117% - 30%) 100%, 0 100%);
 }
-
+.center-sm{
+  text-align: center !important;
+}
 
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
